--- a/api/package.json
+++ b/api/package.json
@@ -18,6 +18,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.4.5",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.19"
+    "nodemon": "^2.0.19",
+    "swagger-jsdoc": "^6.2.1",
+    "swagger-ui-express": "^4.5.0"
   }
 }
