--- a/apits/package.json
+++ b/apits/package.json
@@ -14,6 +14,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "@types/mongoose": "^5.11.97",
     "cors": "^2.8.5",
     "express": "^4.18.1",
     "mongoose": "^6.4.7",
