--- a/apits/api/package.json
+++ b/apits/api/package.json
@@ -24,6 +24,7 @@
     "@types/cors": "^2.8.12",
     "@types/express": "^4.17.13",
     "@types/morgan": "^1.9.3",
+    "axios": "^0.27.2",
     "nodemon": "^2.0.19",
     "ts-node": "^10.9.1",
     "typescript": "^4.7.4"
